--- a/lib/localization/app_en.arb
+++ b/lib/localization/app_en.arb
@@ -1,11 +1,8 @@
 {
-    "signInInfo": "Sign in to your account",
-    "signIn" : "Sign In",
-    "usernameOrEmail" : "Username or email",
-    "password" : "Password",
-    "forgotPassword" : "Forgot your password?",
-    "wrongCredentials" : "Wrong credentials",
-    "noConnection" : "No connection",
-    "serverError" : "Server error",
-    "unknownError" : "Unknown error occured. Try again."
+    "objects": "Objects",
+    "filmedToday" : "Filmed today",
+    "filmingWillTake" : "Filming will take",
+    "gb" : "GB",
+    "available" : "available",
+    "search" : "Search"
 }
